Adicionando a navegação e sections no site

--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site</title>
 </head>
 <body>
-    
+    <!--Criando a navegação do site-->
+    <nav>
+        <ul>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#historia">História</a></li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
+    </nav>
+
+    <!--Criando a estrutura main do site-->
+    <div id="main">
+        <section id="sobre">
+            <h1>Sobre</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?</p>
+
+        </section>
+
+        <section id="historia">
+            <h1>Historia</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?</p>
+
+        </section>
+
+        <section id="contato">
+            <h1>Contato</h1>
+
+            <h3>@2023 - todos os direitos reservados</h3>
+        </section>
+    </div>
 </body>
 </html>
