--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section id="contato">
             <h1>Contato</h1>
 
-            <h3>@2023 - todos os direitos reservados</h3>
+            <h3>@2023-todos os direitos reservados.</h3>
         </section>
     </div>
 </body>
