--- a/index.html
+++ b/index.html
@@ -22,12 +22,41 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?</p>
 
+               <!--CRIANDO CARDS-->
+               <div class="card">
+                <img src="" title="Imagem" alt="Imagem">
+                  <h3>Título do card-1</h3>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit distinctio nam minus sunt earum vel doloremque fugiat? Dicta id quisquam veniam consectetur error soluta, explicabo unde eligendi iure, modi cumque?</p>
+  
+                  <button>R$ 100,00</button>
+  
+              </div>
+
+              <div class="card">
+                <img src="" title="Imagem" alt="Imagem">
+                  <h3>Título do card-2</h3>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit distinctio nam minus sunt earum vel doloremque fugiat? Dicta id quisquam veniam consectetur error soluta, explicabo unde eligendi iure, modi cumque?</p>
+  
+                  <button>R$ 100,00</button>
+  
+              </div>
+
+              <div class="card">
+                <img src="" title="Imagem" alt="Imagem">
+                  <h3>Título do card-3</h3>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit distinctio nam minus sunt earum vel doloremque fugiat? Dicta id quisquam veniam consectetur error soluta, explicabo unde eligendi iure, modi cumque?</p>
+  
+                  <button>R$ 100,00</button>
+  
+              </div>
         </section>
 
         <section id="historia">
             <h1>Historia</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?</p>
+
+
 
         </section>
 
