Adicionando o css no site

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <!--Criando a navegação do site-->
     <nav>
         <ul>
             <li><a href="#sobre">Sobre</a></li>
@@ -15,55 +15,49 @@
         </ul>
     </nav>
 
-    <!--Criando a estrutura main do site-->
+    <!--criando a estrutura main  do site-->
     <div id="main">
+        <!--criando as sections do site-->
         <section id="sobre">
             <h1>Sobre</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.</p>
 
-               <!--CRIANDO CARDS-->
-               <div class="card">
-                <img src="" title="Imagem" alt="Imagem">
-                  <h3>Título do card-1</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit distinctio nam minus sunt earum vel doloremque fugiat? Dicta id quisquam veniam consectetur error soluta, explicabo unde eligendi iure, modi cumque?</p>
-  
-                  <button>R$ 100,00</button>
-  
-              </div>
+        <!--CRIANDO CARDS-->
 
-              <div class="card">
-                <img src="" title="Imagem" alt="Imagem">
-                  <h3>Título do card-2</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit distinctio nam minus sunt earum vel doloremque fugiat? Dicta id quisquam veniam consectetur error soluta, explicabo unde eligendi iure, modi cumque?</p>
-  
-                  <button>R$ 100,00</button>
-  
-              </div>
+         <div class="card">
+            <img src="img/produto.jpg" title="Imagem" alt="Imagem">
+            <h3>titulo do card-1</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero laudantium odio deleniti magni? Blanditiis nihil perferendis sed, assumenda quidem earum, architecto voluptate recusandae cum aspernatur atque ad dolores nobis saepe.</p>
+            <button>R$ 100,00</button>
+         </div>
+         <div class="card">
+            <img src="img/produto.jpg" title="Imagem" alt="Imagem">
+            <h3>titulo do card-2</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero laudantium odio deleniti magni? Blanditiis nihil perferendis sed, assumenda quidem earum, architecto voluptate recusandae cum aspernatur atque ad dolores nobis saepe.</p>
+            <button>R$ 100,00</button>
+         </div>
+         <div class="card">
+            <img src="img/produto.jpg" title="Imagem" alt="Imagem">
+            <h3>titulo do card-3</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero laudantium odio deleniti magni? Blanditiis nihil perferendis sed, assumenda quidem earum, architecto voluptate recusandae cum aspernatur atque ad dolores nobis saepe.</p>
+            <button>R$ 100,00</button>
+         </div>
 
-              <div class="card">
-                <img src="" title="Imagem" alt="Imagem">
-                  <h3>Título do card-3</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit distinctio nam minus sunt earum vel doloremque fugiat? Dicta id quisquam veniam consectetur error soluta, explicabo unde eligendi iure, modi cumque?</p>
-  
-                  <button>R$ 100,00</button>
-  
-              </div>
         </section>
 
         <section id="historia">
-            <h1>Historia</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam, veritatis error odio voluptatibus illo repudiandae ducimus? Libero laborum delectus, quis numquam inventore hic! Culpa ipsam inventore ratione cumque provident?</p>
-
-
+            <h1>História</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.</p>
 
         </section>
 
         <section id="contato">
             <h1>Contato</h1>
-
-            <h3>@2023-todos os direitos reservados.</h3>
+           <h3 id="rodape">@2023-todos os direitos reservados.</h3>
         </section>
     </div>
 </body>
